[gd_scene load_steps=14 format=2]

[ext_resource path="res://cenaPause.gd" type="Script" id=1]
[ext_resource path="res://Imagens/pause.png" type="Texture" id=2]
[ext_resource path="res://Imagens/speaker.png" type="Texture" id=3]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Imagens/fundopause.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 118
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=6]
size = 118
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="cenaPause" type="Node2D"]
script = ExtResource( 1 )

[node name="pauseOverlay" type="Node2D" parent="."]

[node name="pauseButton" type="Button" parent="pauseOverlay"]
margin_left = 16.0
margin_top = 11.0
margin_right = 137.0
margin_bottom = 132.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.431373 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 955, 520 )
scale = Vector2( 27, 27 )
texture = ExtResource( 6 )

[node name="voltarButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -85.0
margin_right = 220.0
margin_bottom = 49.0
theme = SubResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "VOLTAR"
expand_icon = true

[node name="quitButton" type="Button" parent="CanvasLayer"]
margin_left = 757.0
margin_top = 584.0
margin_right = 1151.0
margin_bottom = 759.0
theme = SubResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "SAIR"
icon_align = 1
expand_icon = true

[node name="botaoSom" type="Button" parent="CanvasLayer"]
margin_left = 866.0
margin_top = 259.0
margin_right = 1065.0
margin_bottom = 395.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[connection signal="pressed" from="pauseOverlay/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/voltarButton" to="." method="_on_voltarButton_pressed"]
[connection signal="pressed" from="CanvasLayer/quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/botaoSom" to="." method="_on_botaoSom_pressed"]
